--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "msrcosmos",
+  "name": "simple-App",
   "version": "1.0.0",
   "description": "library management system",
   "main": "server.js",
